# recetas

./: Pipfile
poetry-recetas/: pyproject.toml
poetry-recetas/recetas/core/: views.py
poetry-recetas/recetas/core/static/core/css/: core.css  main.css
poetry-recetas/recetas/core/templates/core/: base.html  base1.html
poetry-recetas/recetas/recetas/: settings.py  urls.py
poetry-recetas/tests/: test_poetry_recetas.py
recetas/recetas/: settings.py
