[tool.poetry]
name = "poetry-recetas"
version = "0.1.0"
description = ""
authors = ["barkalez <barkala21@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.5"
django-registration = "^3.1"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
server = "python manage.py runserver"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

